# wtf-langchain

./: .gitignore  main.py  pyproject.toml
01_Hello_Langchain/: 1.base.py  1.chat.py  2.chat.py  3.embeddings.py  4.ollama_embeddings.py
04_Prompts/: 1.prompt.py  2.fewShotPrompt.py  3.chatPromptTemplate.py  4.fewPromptTemplate.py
05_Output_Parsers/: 1.strOutputParser.py  2.jsonOutputParser.py  3.runnableLambda.py
06_Chains/: 1.chains.py  2.extend.py
07_Memory/: 1.temp_memory.py  2.long_memory.py
chat_history/: 1.json
loader/: csvLoader.py  jay.json  jay_lines.json  jsonLoader.py  pdfLoader.py  stu.csv  text.txt  textLoader.py
vectorStore/: 1.vectorStore.py  2.long_term_vectorStore.py  3.retrieve.py  4runnablePassThrough.py  stu.csv
